--- a/index.html
+++ b/index.html
@@ -9,99 +9,71 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: Montserrat, sans-serif;
-      }
-
-      p, li {
-        font-size: 16px;
-        color: #475550;
-      }
-
-      .trybe-green {
-        color: #11a36a;
-      }
-
-      #main-title {
-        color: #0a7e51;
-        line-height: 55px;
-        font-weight: 600;
-        font-size: 45px;
-        letter-spacing: -1px;
-      }
-
-      .section-title {
-        line-height: 42px;
-        font-weight: 600;
-        font-size: 28px;
-      }
-
-      .testimonial-name {
-        color: #11a36a;
-        line-height: 20px;
-        font-weight: 600;
-        font-size: 14px;
-      }
-
-      .picture {
-        border-radius: 100%;
-      }
-
-      .button {
-          color: #fff;
-          background-color: #11a36a;
-          padding: 15px 30px;
-          border-radius: 4px;
-          font-size: 16px;
-          line-height: 20px;
-          font-weight: 700;
-          text-decoration: none;
-      }
-      
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 id="main-title">Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
-    <img src="images/smiling-image.jpeg" alt="Foto de um homem sorrindo" width="400px">
-    <p>
-      Com atividades presenciais e online, mentorias individuais e desafios práticos, a Trybe é a escola do futuro e para o futuro que acelera sua carreira em desenvolvimento de software em até 12 meses.
-      <br><br>
-      E o melhor? <strong>Você não paga nada até conseguir um trabalho com uma remuneração que atinja um patamar mínimo.</strong>
-    </p>
-    <h2 class="trybe-green section-title">A Trybe é para todos, inclusive para VOCÊ.</h2>
-    <p>
-      Para você que <strong>já é estudante de computação</strong>, para você que <strong>se interessa pelo assunto</strong> e até mesmo para <strong>você que está pensando em mudar de carreira</strong> e ainda não conhece nada.
-      <br><br>
-      A Trybe funciona para <strong>qualquer pessoa</strong> que queira uma <strong>carreira de sucesso em tecnologia.</strong>
-      <br><br>
-      <strong>E QUE TENHA MUITA VONTADE E DEDICAÇÃO!</strong>
-    </p>
-    <img class="picture" src="images/conrado-medeiros.png" alt="Foto de Conrado Medeiros" width="100px">
-    <p>
-      <em>"Eu trabalho com Marketing e não tinha nenhuma formação ou experiência na área e consegui entrar na Trybe para me tornar desenvolvedor de software."</em> <br>
-    </p>
-    <h4 class="trybe-green testimonial-name">
-      <strong>Conrado Medeiros</strong> <br>
-      Aluno da Turma de Setembro - BH
-    </h4>
-    <img class="picture" src="images/gabriel-dos-santos.png" alt="Foto de Gabriel dos Santos" width="100px">
-    <p>
-      <em>"Eu não sabia nada de programação! Estudei os conteúdos gratuitos disponibilizados, consegui fazer o processo e passar. Estou aqui firme e forte para conseguir virar um desenvolvedor."</em> <br>
-    </p>
-    <h4 class="trybe-green testimonial-name">
-      <strong>Gabriel dos Santos</strong> <br>
-      Aluno da Turma de Setembro - BH
-    </h4>
-    <img class="picture" src="images/anderson-bolivar.png" alt="Foto de Anderson Bolivar" width="100px">
-    <p>
-      <em>"Sou estudante de Engenharia Química e entrei na Trybe sem nenhuma experiência na área e estou animado para me tornar desenvolvedor."</em> <br>
-    </p>
-    <h4 class="trybe-green testimonial-name">
-      <strong>Anderson Bolivar</strong> <br>
-      Aluno da Turma de Setembro - BH
-    </h4>
-    <h2 class="trybe-green section-title">Quem somos e por que estamos aqui?</h2>
+    <div class="header">
+      <div class="header-content">
+        <h1 class="main-title">Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
+        <div class="header-text">
+          <p>
+            Com atividades presenciais e online, mentorias individuais e desafios práticos, a Trybe é a escola do futuro e para o futuro que acelera sua carreira em desenvolvimento de software em até 12 meses.
+          </p>  
+            E o melhor? <strong>Você não paga nada até conseguir um trabalho com uma remuneração que atinja um patamar mínimo.</strong>
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="market">
+      <h2 class="trybe-green section-title">A Trybe é para todos, inclusive para VOCÊ.</h2>
+      <div class="market-text">
+        <p>
+        Para você que <strong>já é estudante de computação</strong>, para você que <strong>se interessa pelo assunto</strong> e até mesmo para <strong>você que está pensando em mudar de carreira</strong> e ainda não conhece nada.
+        </p>
+        <p>
+        A Trybe funciona para <strong>qualquer pessoa</strong> que queira uma <strong>carreira de sucesso em tecnologia.</strong>
+        </p>
+        <p>
+        <strong>E QUE TENHA MUITA VONTADE E DEDICAÇÃO!</strong>
+        </p>
+      </div>
+    </div>
+    <div class="student-testimonial">
+      <div class="student-container">
+        <img class="picture" src="images/conrado-medeiros.png" alt="Conrado Medeiros" width="100px">
+        <p>
+        <em>"Eu trabalho com Marketing e não tinha nenhuma formação ou experiência na área e consegui entrar na Trybe para me tornar desenvolvedor de software."</em> <br>
+        </p>
+        <h4 class="trybe-green testimonial-name">
+        <strong>Conrado Medeiros</strong><br>
+        Aluno da Turma de Setembro - BH
+        </h4>
+      </div>
+      <div class="student-container">
+        <img class="picture" src="images/gabriel-dos-santos.png" alt="Foto de Gabriel dos Santos" width="100px">
+        <p>
+          <em>"Eu não sabia nada de programação! Estudei os conteúdos gratuitos disponibilizados, consegui fazer o processo e passar. Estou aqui firme e forte para conseguir virar um desenvolvedor."</em> <br>
+        </p>
+        <h4 class="trybe-green testimonial-name">
+          <strong>Gabriel dos Santos</strong> <br>
+          Aluno da Turma de Setembro - BH
+        </h4>
+      </div>
+      <div class="student-container">
+        <img class="picture" src="images/anderson-bolivar.png" alt="Foto de Anderson Bolivar" width="100px">
+          <p>
+          <em>"Sou estudante de Engenharia Química e entrei na Trybe sem nenhuma experiência na área e estou animado para me tornar desenvolvedor."</em> <br>
+        </p>
+        <h4 class="trybe-green testimonial-name">
+          <strong>Anderson Bolivar</strong> <br>
+          Aluno da Turma de Setembro - BH
+        </h4>
+        </div>
+      </div>
+    </div>
+    <div class="learning">
+      <div class="learning-left"></div>
+        <h2 class="trybe-green section-title">Quem somos e por que estamos aqui?</h2>
     <img class="picture" src="images/matheus-goyas.jpeg" alt="Matheus Goyas" width="100px">
     <p>
       Fundamos a Trybe porque acreditamos que qualquer pessoa que tenha muita vontade de vencer, independente da formação ou da condição financeira, é capaz de ter uma carreira de sucesso. <br>
