--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
         </div>
       </div>
     </div>
-    <div class="learning">
-      <div class="learning-left"></div>
+
         <h2 class="trybe-green section-title">Quem somos e por que estamos aqui?</h2>
     <img class="picture" src="images/matheus-goyas.jpeg" alt="Matheus Goyas" width="100px">
     <p>
@@ -90,15 +89,21 @@
       <strong>João Duarte,</strong> <br>
       CTO e Co-fundador da Trybe
     </h4>
-    <h2 class="trybe-green section-title">Como é a formação?</h2>
-    <ul>
-      <li>Atividades <strong>online, offline e apoio individual</strong> para cada aluno</li>
-      <li>Experiência <strong>mão na massa</strong>, lidando com <strong>desafios e problemas reais</strong></li>
-      <li>Equipe dedicada a te ajudar a encontrar a <strong>oportunidade profissional perfeita para você</strong></li>
-      <li>Vivência das <strong>rotinas e processos reais</strong> de desenvolvimento das <strong>empresas de ponta</strong></li>
-    </ul>
-    <img src="images/learning-web.jpeg" alt="Duas pessoas aprendendo juntas com seus notebooks, vistas de cima" width="560px">
-    <h3 class="trybe-green">Quer saber mais sobre nossa formação?</h3>
-    <a class="button" href="https://www.google.com/search?q=curriculo+trybe&oq=curriculo+trybe&aqs=chrome..69i57.1900j0j8&sourceid=chrome&ie=UTF-8" target="_blank">Faça o download do nosso currículo</a>
+    <div class="learning">
+      <div class="learning-left">
+        <h2 class="trybe-green section-title">Como é a formação?</h2>
+        <ul>
+          <li>Atividades <strong>online, offline e apoio individual</strong> para cada aluno</li>
+          <li>Experiência <strong>mão na massa</strong>, lidando com <strong>desafios e problemas reais</strong></li>
+          <li>Equipe dedicada a te ajudar a encontrar a <strong>oportunidade profissional perfeita para você</strong></li>
+          <li>Vivência das <strong>rotinas e processos reais</strong> de desenvolvimento das <strong>empresas de ponta</strong></li>
+        </ul>
+      </div>
+      <img class="learning-right" src="images/learning-web.jpeg" alt="Duas pessoas" width="560px">
+      <div class="footer">
+        <h3 class="trybe-green">Quer saber mais sobre nossa formação?</h3>
+        <a class="button" href="https://www.google.com/search?q=curriculo+trybe&oq=curriculo+trybe&aqs=chrome..69i57.1900j0j8&sourceid=chrome&ie=UTF-8" target="_blank">Faça o download do nosso currículo</a>
+      </div>
+    </div> 
   </body>
 </html>
