--- a/index.html
+++ b/index.html
@@ -71,24 +71,29 @@
         </div>
       </div>
     </div>
-
-        <h2 class="trybe-green section-title">Quem somos e por que estamos aqui?</h2>
-    <img class="picture" src="images/matheus-goyas.jpeg" alt="Matheus Goyas" width="100px">
-    <p>
-      Fundamos a Trybe porque acreditamos que qualquer pessoa que tenha muita vontade de vencer, independente da formação ou da condição financeira, é capaz de ter uma carreira de sucesso. <br>
-    </p>
-    <h4 class="trybe-green testimonial-name">
-      <strong>Matheus Goyas,</strong> <br>
-      CEO e Co-fundador da Trybe
-    </h4>
-    <img class="picture" src="images/joao-daniel.jpeg" alt="daniel" width="100px">
-    <p>
-      Temos a premissa de fazer os estudantes viverem na prática desafios idênticos aos enfrentados na vida real. Nosso compromisso é tão grande com o sucesso, que a Trybe só ganha se os nossos estudantes estiverem ganhando bem. <br>
-    </p>
-    <h4 class="trybe-green testimonial-name">
-      <strong>João Duarte,</strong> <br>
-      CTO e Co-fundador da Trybe
-    </h4>
+    <div class="chefes">
+      <h2 class="trybe-green section-title">Quem somos e por que estamos aqui?</h2>
+        <div class="co">
+          <img class="picture" src="images/matheus-goyas.jpeg" alt="Matheus Goyas" width="100px">
+          <p>
+            Fundamos a Trybe porque acreditamos que qualquer pessoa que tenha muita vontade de vencer, independente da formação ou da condição financeira, é capaz de ter uma carreira de sucesso. <br>
+          </p>
+          <h4 class="trybe-green testimonial-name">
+            <strong>Matheus Goyas,</strong> <br>
+            CEO e Co-fundador da Trybe
+          </h4>
+        </div>
+        <div class="co">
+          <img class="picture" src="images/joao-daniel.jpeg" alt="daniel" width="100px">
+          <p>
+            Temos a premissa de fazer os estudantes viverem na prática desafios idênticos aos enfrentados na vida real. Nosso compromisso é tão grande com o sucesso, que a Trybe só ganha se os nossos estudantes estiverem ganhando bem. <br>
+          </p>
+          <h4 class="trybe-green testimonial-name">
+            <strong>João Duarte,</strong> <br>
+            CTO e Co-fundador da Trybe
+          </h4>
+        </div>
+    </div>
     <div class="learning">
       <div class="learning-left">
         <h2 class="trybe-green section-title">Como é a formação?</h2>
